--- a/component/build.gradle
+++ b/component/build.gradle
@@ -14,6 +14,7 @@ android {
 }
 
 dependencies {
+    implementation project(":common")
 
     // compose
     implementation 'androidx.activity:activity-compose:1.4.0'
@@ -22,4 +23,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    // Accompanist
+    def accompanist_version = "0.23.0"
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
 }
